v6.8
-----
+ Completely re-wrote how Enhanced Steam handles highlighting to be much faster and accurate
+ Added a "Customize" button to app pages that lets you decide which sections to display
+ Added an "All New Releases" tab to Steam home page
: Fixed a bug that caused coupon discounts to not display properly on app pages
: Fixed the placement of regional price comparison box on sale pages
: Fixed the spacing of the "Popular" tab on the home page
: Fixed a bug that caused some packages not to process savings calculations corectly
: Fixed a bug where DLC checkboxes would behave incorrectly if the DLC had no subID
: Fixed a bug that caused incorrect image opacity on items when highlighting was disabled
: Updated DLC pages to work with the new store layout including the "add all unowned" button


v6.7.1
-----
+ Added WSGF 4k grading to applicable games
+ Added tooltips on review scores to subsequent results on continuous scrolling feature
: Fixed a bug where homepage carousel items didn't load correctly before being cachced
: Fixed a bug that caused search results not to display Early Access banners
: Updated 3rd Party DRM warning to more closely resemble the original design
: Fixed a bug that caused regional price comparisons on sub pages to be incorrectly positioned
: Fixed a bug that caused some SteamDB links to point to incorrect URLs
: Fixed a bug that caused bundle savings to be incorrectly calculated
: Updated Indonesian currency formatting

v6.7
-----
+ Lots of stuff, basically it supports the new store
: Updated almost every existing function to account for the new store
- A few things that are no longer required due to the new store

v6.6.1
-----
+ Added SteamCardExchange link to applicable app pages
+ Added basic support for upcomming store currencies
: Updated SteamDB icon on store page buttons
: Fixed a bug caused by Steam_Language cookie not being present for all users

v6.6
-----
+ Added support for Japanese Yen in regional price comparison feature